[gd_scene load_steps=3 format=3 uid="uid://4theqf1eijrs"]

[ext_resource type="Script" uid="uid://dpgq1iuxyexu" path="res://scripts/MainMenu.gd" id="1"]

[sub_resource type="CanvasTexture" id="CanvasTexture_yqorp"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1919.0
offset_bottom = 1072.0
texture = SubResource("CanvasTexture_yqorp")

[node name="GlassPanel" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1918.0
offset_bottom = 1075.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.0
offset_top = -278.0
offset_right = 124.0
offset_bottom = 284.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "A Story For U"
horizontal_alignment = 1

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start New Game"

[node name="LoadGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"
